# LinearElasticity

./: .travis.yml  AUTHORS  CMakeLists.txt  README.md  elasti1_3d.c  elastic.c  elastic.h  install_manifest.txt  libElas.5.0.a.dylib  libElas.5.dylib  libElas.dylib  makefile
common/: lplib3.c  solve.c  sparse.c  sparse.h
demos/2d/: carre.elas  carre.mesh  carre.res  carre.sol  disk.elas  disk.mesh  disk.res  disk.sol
demos/3d/: 8branch.elas  8branch.mesh  8branch.sol  biel3d.elas  biel3d.mesh  biel3d.res  biel3d.sol
lib/: libElas.5.0.a.dylib
sources/: chrono.c  chrono.h  compil.date  elasti1_2d.c  elasti1_3d.c  elastic.c  elastic.h  hash.c  inout.c  libmesh5.c  libmesh5.h  lplib3.c  lplib3.h  ls_calls.c  ls_calls.h  packing.c  solve.c  sparse.c  sparse.h
sources/tmp/: elasti1.c.old  hash.c.old
